<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/generalInfoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/general_information" />

            <TextView
                android:id="@+id/generalInfoBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/this_is_your_user_profile_page_here_you_can_view_information_about_yourself_such_as_your_rating_comments_others_have_made_about_you_and_your_current_listings_if_you_would_like_to_learn_more_about_any_of_the_information_listed_here_please_look_below" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/contactHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_information" />

            <TextView
                android:id="@+id/contactBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/your_user_profile_will_show_basic_information_you_provide_about_yourself_such_as_your_profile_picture_and_your_biography_you_can_always_change_these_at_any_time_using_the_edit_feature" />

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/deleteHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <TextView
                android:id="@+id/deleteBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/use_this_function_to_delete_your_profile_please_note_that_this_cannot_be_undone_so_please_only_use_this_if_you_are_certain_that_you_would_like_to_do_so" />

            <View
                android:id="@+id/divider3"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/listingsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/current_listings" />

            <TextView
                android:id="@+id/listingsBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/here_you_can_view_all_of_your_current_listings_for_items_you_have_posted_you_can_edit_or_delete_them_at_any_point_by_selecting_them" />

            <View
                android:id="@+id/divider4"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>